--- a/views/assets.xml
+++ b/views/assets.xml
@@ -5,4 +5,9 @@
             <link rel="stylesheet" type="text/scss" href="/theme_tutorial/static/scss/style.scss"/>
         </xpath>
     </template>
+    <template id="_assets_primary_variables" name="My SCSS variables" inherit_id="website._assets_primary_variables" priority="1">
+        <xpath expr="link[last()]" position="after">
+            <link rel="stylesheet" type="text/scss" href="/theme_tutorial/static/scss/primary_variables.scss"/>
+        </xpath>
+    </template>
 </odoo>
